<resources>
    <string name="app_name">VeggieRecipes</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="select_photo">SElECT PHOTO</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>